# ch2rs

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  release.yml
src/: codegen.rs  generator.rs  lib.rs  main.rs  miner.rs  options.rs  schema.rs
tests/: integration.rs
tests/snapshots/: all@-D.snap  all@-D_--owned.snap  all@-S.snap  all@-SD.snap  all@-SD_--owned.snap  all@-S_--owned.snap
