[package]
name = "ch2rs"
version = "0.1.0"
authors = ["Paul Loyd <pavelko95@gmail.com>"]
edition = "2018"

[[bin]]
name = "ch2rs"
path = "bin/ch2rs.rs"

[dependencies]
anyhow = "1.0.40"
clickhouse = "0.6.5"
heck = "0.3.2"
reflection = "0.1.3"
serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.21"
tokio = { version = "1.6.0", features = ["macros"] }

[dev-dependencies]
insta = "1.7.1"
serde_repr = "0.1.7"
serde_bytes = "0.11.5"
trybuild = "1.0.42"
